--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        bundle config set --local without 'development'
+        bundle config set --local deployment 'false'
         bundle install --jobs 4 --retry 3
 
     - name: Run Tests
@@ -85,7 +85,7 @@ jobs:
         
         # Run tests
         mkdir -p tmp
-        bundle exec rspec --format documentation --format RspecJunitFormatter --out tmp/test-results.xml || true
+        bundle exec rspec --format documentation --format RspecJunitFormatter --out tmp/test-results.xml
 
     - name: Upload Test Results
       uses: actions/upload-artifact@v4
@@ -124,12 +124,12 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        bundle config set --local without 'development'
+        bundle config set --local deployment 'false'
         bundle install
 
     - name: Run RuboCop
       run: |
-        bundle exec rubocop --format github || true
+        bundle exec rubocop --format github
 
   # Security scan
   security:
