--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,198 +1,119 @@
-name: CI - Firebird Adapter
+name: CI
 
 on:
+  pull_request:
   push:
     branches: [ rails-7-2, main ]
-  pull_request:
-    branches: [ rails-7-2, main ]
-  workflow_dispatch:
 
 jobs:
+  scan_ruby:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.3.6'
+          bundler-cache: true
+
+      - name: Install Firebird Client Libraries
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y firebird-dev libfbclient2
+          echo "FIREBIRD_INCLUDE=/usr/include/firebird" >> $GITHUB_ENV
+          echo "FIREBIRD_LIB=/usr/lib/x86_64-linux-gnu" >> $GITHUB_ENV
+
+      - name: Install dependencies
+        run: bundle install
+
+      - name: Scan for known security vulnerabilities in gems used
+        run: |
+          gem install bundler-audit
+          bundle audit --update || true
+
+  lint:
+    runs-on: ubuntu-latest
+    env:
+      RUBOCOP_CACHE_ROOT: tmp/rubocop
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.3.6'
+          bundler-cache: true
+
+      - name: Install Firebird Client Libraries
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y firebird-dev libfbclient2
+          echo "FIREBIRD_INCLUDE=/usr/include/firebird" >> $GITHUB_ENV
+          echo "FIREBIRD_LIB=/usr/lib/x86_64-linux-gnu" >> $GITHUB_ENV
+
+      - name: Prepare RuboCop cache
+        uses: actions/cache@v4
+        env:
+          DEPENDENCIES_HASH: ${{ hashFiles('**/.rubocop.yml', '**/.rubocop_todo.yml', 'Gemfile.lock') }}
+        with:
+          path: ${{ env.RUBOCOP_CACHE_ROOT }}
+          key: rubocop-${{ runner.os }}-${{ env.DEPENDENCIES_HASH }}-${{ github.ref_name == github.event.repository.default_branch && github.run_id || 'default' }}
+          restore-keys: |
+            rubocop-${{ runner.os }}-${{ env.DEPENDENCIES_HASH }}-
+
+      - name: Install dependencies
+        run: bundle install
+
+      - name: Lint code for consistent style
+        run: bundle exec rubocop -f github || true
+
   test:
-    runs-on: ubuntu-22.04
-    strategy:
-      fail-fast: false
-      matrix:
-        ruby: [ '3.3.6' ]
-        rails: [ '7-2-stable' ]
-        firebird: [ '4.0.5' ]
+    runs-on: ubuntu-latest
 
     env:
       ISC_PASSWORD: masterkey
       FIREBIRD_DATABASE: /firebird/data/test.fdb
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Install Firebird packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install --no-install-recommends -y firebird-dev libfbclient2 firebird4.0-server
+          echo "FIREBIRD_INCLUDE=/usr/include/firebird" >> $GITHUB_ENV
+          echo "FIREBIRD_LIB=/usr/lib/x86_64-linux-gnu" >> $GITHUB_ENV
 
-    - name: Setup Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: ${{ matrix.ruby }}
-        rubygems: latest
+      - name: Setup Firebird database
+        run: |
+          sudo mkdir -p /firebird/data
+          sudo chmod 777 /firebird/data
+          sudo systemctl start firebird4.0 || sudo /etc/init.d/firebird4.0 start || true
+          sleep 5
+          isql -user sysdba -password masterkey -q "CREATE DATABASE '/firebird/data/test.fdb' USER 'sysdba' PASSWORD 'masterkey'" || echo "Database exists"
 
-    - name: Install Firebird Client Libraries
-      run: |
-        # Install Firebird client development libraries
-        sudo apt-get update
-        sudo apt-get install -y firebird-dev libfbclient2
-        
-        # Set environment variables for fb gem compilation
-        echo "FIREBIRD_INCLUDE=/usr/include/firebird" >> $GITHUB_ENV
-        echo "FIREBIRD_LIB=/usr/lib/x86_64-linux-gnu" >> $GITHUB_ENV
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Install Firebird Server
-      run: |
-        # Install Firebird server for testing
-        sudo apt-get install -y firebird4.0-server
-        
-        # Create database directory
-        sudo mkdir -p /firebird/data
-        sudo chmod 777 /firebird/data
-        
-        # Start Firebird service
-        sudo systemctl start firebird4.0 || sudo /etc/init.d/firebird4.0 start || true
-        sleep 5
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.3.6'
+          bundler-cache: true
 
-    - name: Setup Database
-      run: |
-        # Create test database
-        isql -user sysdba -password masterkey -q "CREATE DATABASE '/firebird/data/test.fdb' USER 'sysdba' PASSWORD 'masterkey'" || echo "Database exists"
+      - name: Run tests
+        env:
+          RAILS_ENV: test
+        run: |
+          bundle install
+          bundle exec rspec --format documentation --format RspecJunitFormatter --out tmp/test-results.xml || true
 
-    - name: Install Dependencies
-      run: |
-        bundle install --jobs 4 --retry 3
-
-    - name: Run Tests
-      run: |
-        echo "Ruby version: $(ruby --version)"
-        echo "Rails version: $(ruby -e 'require \"bundler\"; puts Bundler.locked_gems[\"rails\"].version rescue \"unknown\"')"
-        echo "Firebird version: ${{ matrix.firebird }}"
-        
-        # Run tests
-        mkdir -p tmp
-        bundle exec rspec --format documentation --format RspecJunitFormatter --out tmp/test-results.xml || true
-
-    - name: Upload Test Results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: test-results-${{ matrix.ruby }}-${{ matrix.rails }}-${{ matrix.firebird }}
-        path: tmp/
-
-    - name: Test Summary
-      if: always()
-      run: |
-        echo "## Test Summary"
-        echo "- Ruby: ${{ matrix.ruby }}"
-        echo "- Rails: ${{ matrix.rails }}"
-        echo "- Firebird: ${{ matrix.firebird }}"
-        
-        # Create status badge
-        if [ "${{ job.status }}" = "success" ]; then
-          echo "✅ Tests passed"
-        else
-          echo "❌ Tests failed"
-        fi
-
-  # Lint job
-  lint:
-    runs-on: ubuntu-22.04
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-
-    - name: Setup Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: '3.3.6'
-        rubygems: latest
-
-    - name: Install Firebird Client Libraries
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y firebird-dev libfbclient2
-        echo "FIREBIRD_INCLUDE=/usr/include/firebird" >> $GITHUB_ENV
-        echo "FIREBIRD_LIB=/usr/lib/x86_64-linux-gnu" >> $GITHUB_ENV
-
-    - name: Install Dependencies
-      run: |
-        bundle install
-
-    - name: Run RuboCop
-      run: |
-        bundle exec rubocop --format github || true
-
-  # Security scan
-  security:
-    runs-on: ubuntu-22.04
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-
-    - name: Security Audit
-      run: |
-        gem install bundler-audit
-        bundle audit --update || true
-
-  # Performance test
-  performance:
-    runs-on: ubuntu-22.04
-    needs: test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/rails-7-2'
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-
-    - name: Setup Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: '3.3.6'
-        rubygems: latest
-
-    - name: Install Firebird
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y firebird-dev libfbclient2 firebird4.0-server
-        echo "FIREBIRD_INCLUDE=/usr/include/firebird" >> $GITHUB_ENV
-        echo "FIREBIRD_LIB=/usr/lib/x86_64-linux-gnu" >> $GITHUB_ENV
-        
-        sudo mkdir -p /firebird/data
-        sudo chmod 777 /firebird/data
-        sudo systemctl start firebird4.0 || sudo /etc/init.d/firebird4.0 start || true
-        sleep 3
-
-    - name: Performance Tests
-      run: |
-        # Install dependencies
-        bundle install
-        
-        # Basic performance benchmarking
-        bundle exec ruby -e "
-          require './spec/spec_helper'
-          connection = ActiveRecord::Base.connection
-          
-          puts '=== Performance Benchmarks ==='
-          
-          # Test 1000 simple queries
-          start_time = Time.now
-          1000.times do
-            connection.select_value('SELECT 1 FROM RDB\$DATABASE')
-          end
-          end_time = Time.now
-          
-          puts \"1000 queries: #{(end_time - start_time).round(3)}s\"
-          puts \"Queries per second: #{(1000 / (end_time - start_time)).round(2)}\"
-        " || echo "Performance test failed"
-
-  # Compatibility matrix test
-  compatibility:
-    runs-on: ubuntu-22.04
-    needs: test
-    if: always()
-    steps:
-    - name: Compatibility Report
-      run: |
-        echo "## Compatibility Matrix Results"
-        echo "This job runs after all test matrix jobs complete"
-        echo "It will generate a compatibility report for the firebird_adapter"
+      - name: Keep test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results
+          path: tmp/
+          if-no-files-found: ignore
