--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - Firebird 3 (Native Ubuntu Fixed)
+name: CI - Firebird 3 (Native Ubuntu - Fixed)
 
 on:
   pull_request:
@@ -21,43 +21,33 @@ jobs:
 
       - name: Pre-configure Firebird (Non-interactive)
         run: |
-          # Configuración previa para evitar prompts de contraseña y tipo de servidor
+          # Configuración previa para evitar prompts
           echo "firebird-server shared/firebird/enabled boolean true" | sudo debconf-set-selections
           echo "firebird-server shared/firebird/classic boolean false" | sudo debconf-set-selections
           echo "firebird-server shared/firebird/super boolean true" | sudo debconf-set-selections
-          # Importante: Establecer la contraseña de SYSDBA a 'masterkey' para que coincida con la env var
           echo "firebird-server shared/firebird/password password masterkey" | sudo debconf-set-selections
 
       - name: Install Firebird 3
         run: |
-          # Instalación silenciosa
           sudo DEBIAN_FRONTEND=noninteractive apt-get install -y firebird-server firebird-dev libfbclient2
-
-          # Configuración de rutas para la gema
           echo "FIREBIRD_INCLUDE=/usr/include/firebird" >> $GITHUB_ENV
           echo "FIREBIRD_LIB=/usr/lib/x86_64-linux-gnu" >> $GITHUB_ENV
 
       - name: Start Firebird Service
         run: |
-          # Recargamos systemd
           sudo systemctl daemon-reload
-
-          # CORRECCIÓN AQUÍ: Usamos el nombre correcto 'firebird3.0'
           sudo systemctl enable firebird3.0
           sudo systemctl start firebird3.0
-
           sleep 5
 
-          # Verificación
-          sudo systemctl status firebird3.0 --no-pager
-          pgrep fb_inet_server || (echo "Firebird process not found" && exit 1)
+          # CORRECCIÓN AQUÍ: Buscamos el proceso 'firebird' (como mostraron los logs)
+          pgrep firebird || (echo "Firebird process not found" && exit 1)
 
       - name: Setup Test Database
         run: |
           sudo mkdir -p /firebird/data
           sudo chmod 777 /firebird/data
-          # Crear DB (usamos el isql global)
-          isql -u sysdba -p masterkey -q "CREATE DATABASE 'localhost:/firebird/data/test.fdb' USER 'sysdba' PASSWORD 'masterkey';" || echo "DB exists or creation error"
+          isql -u sysdba -p masterkey -q "CREATE DATABASE 'localhost:/firebird/data/test.fdb' USER 'sysdba' PASSWORD 'masterkey';" || echo "DB exists"
 
       - name: Checkout code
         uses: actions/checkout@v4
